tests/fixtures/invalid/divmod_list_list.py
# Cannot call divmod() with List[int], List[int]
x = divmod([1, 2, 3], [1, 2, 3])
